# esu

./: .gitignore  README.md  package-lock.json  requirements.txt  win_rate_table_tab.py
server/: config.yaml.example  pyproject.toml
server/app/: main.py
server/app/api/: api.py  deps.py
server/app/api/endpoints/: __init__.py  auth.py  decks.py  environments.py  match_results.py  match_types.py  prior_knowledge.py  statistics.py  users.py  win_rates.py
server/app/core/: auth.py  config.py  logger.py  security.py  win_rate_calculator.py
server/app/db/: mongodb.py
server/app/models/: deck.py  environment.py  match_result.py  match_type.py  prior_knowledge.py  user.py  win_rate.py
server/scripts/: password_converter.py
web/: index.html  package-lock.json  package.json
web/src/: App.css  App.tsx  index.css  types.ts
web/src/components/: AdminPanel.tsx  AuthCallback.tsx  BatchMatchModal.tsx  Dashboard.tsx  DeckMatchups.tsx  Decks.tsx  Environments.tsx  Login.tsx  MatchResults.tsx  MatchTypes.tsx  PriorKnowledgeTable.tsx  Statistics.tsx  WinRateTable.css  WinRateTable.tsx
web/src/config/: api.ts  constants.ts
web/src/types/: index.ts
web/src/utils/: matchResults.ts  matchUtils.ts
